Lesson 21 - API Implementation: Implemented action to create note
